v2 ver of api w/ featurez
